particles aren't rendered the same way as in 2.63 in latest builds for 2.64 #32201

Closed
opened 2012-07-27 16:32:26 +02:00 by mat ali · 5 comments

%%%particle size is not consistent between pre 48239 svn and 49180 svn. This lead to big changes in scenes with heavy hair paricle use (see attached pictures). Retro compatibility would be broken if the bug still exist in finale 2.64.%%%

%%%particle size is not consistent between pre 48239 svn and 49180 svn. This lead to big changes in scenes with heavy hair paricle use (see attached pictures). Retro compatibility would be broken if the bug still exist in finale 2.64.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%i attach an example blend. just F12 on 2.63a and latest svn, the bug will show up.%%%

%%%i attach an example blend. just F12 on 2.63a and latest svn, the bug will show up.%%%

%%%Caused by this bugfix:
http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=49127

Will add an option to control if object size is used or not.%%%

%%%Caused by this bugfix: http://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=49127 Will add an option to control if object size is used or not.%%%

%%%Committed fix now. On files like the one attached, which were saved (approximately) before this bugfix, it will not use the object scale, newer ones will use it. The Scale option can be toggled in the particles Render panel.%%%

%%%Committed fix now. On files like the one attached, which were saved (approximately) before this bugfix, it will not use the object scale, newer ones will use it. The Scale option can be toggled in the particles Render panel.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32201
No description provided.